allow in ghc 8.6.3,8.4.4,8.2.2,8.0.2

--- a/defaults.yaml
+++ b/defaults.yaml
@@ -1,4 +1,4 @@
-ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-orphans -fno-warn-missing-signatures
+ghc-options: -Wall -fno-warn-orphans -fno-warn-missing-signatures
 
 default-extensions:
   - AutoDeriveTypeable
