--- a/yam/package.yaml
+++ b/yam/package.yaml
@@ -15,6 +15,8 @@ extra-source-files:
 dependencies:
   - base >= 4.9 && < 5
   - salak >= 0.1.6 && < 0.3
+  - menshen
+  - aeson
   - text
   - bytestring
   - base16-bytestring
