--- a/stack.yaml
+++ b/stack.yaml
@@ -42,6 +42,7 @@ packages:
 # extra-deps: []
 extra-deps:
   - menshen-0.0.1
+  - salak-0.1.8
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
