--- a/stack.yaml
+++ b/stack.yaml
@@ -40,6 +40,11 @@ packages:
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
+extra-deps:
+  - servant-0.16
+  - servant-client-0.16
+  - servant-client-core-0.16
+  - servant-server-0.16
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
