--- a/yam/package.yaml
+++ b/yam/package.yaml
@@ -1,5 +1,5 @@
 name:                yam
-version:             0.5.13
+version:             0.5.14
 synopsis:            Yam Web
 #description:
 homepage:            https://github.com/leptonyu/yam/yam#readme
@@ -35,8 +35,8 @@ dependencies:
   - wai
   - warp
   - http-types
-  - servant-client
-  - servant-server
+  - servant-client >= 0.15 && < 0.17
+  - servant-server >= 0.15 && < 0.17
   - servant-swagger
   - servant-swagger-ui
   - swagger2
