--- a/stack.yaml
+++ b/stack.yaml
@@ -36,11 +36,11 @@ packages:
 - yam
 - yam-datasource
 - example
+- ../salak/salak
+- ../salak/salak-yaml
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-extra-deps:
-  - salak-0.1.11
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
