--- a/example/package.yaml
+++ b/example/package.yaml
@@ -26,6 +26,7 @@ executables:
       - servant-server
       - monad-logger
       - salak
+      - salak-yaml
       - http-types
       - text
       - swagger2
