--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-13.13
+resolver: lts-13.15
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -35,9 +35,7 @@ resolver: lts-13.13
 packages:
 - yam
 - yam-datasource
-- example
-- ../salak/salak
-- ../salak/salak-yaml
+  #- example
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
