--- a/yam/package.yaml
+++ b/yam/package.yaml
@@ -1,5 +1,5 @@
 name:                yam
-version:             0.5.17
+version:             0.6.0
 synopsis:            Yam Web
 #description:
 homepage:            https://github.com/leptonyu/yam/yam#readme
@@ -14,8 +14,7 @@ extra-source-files:
 
 dependencies:
   - base >= 4.10 && < 5
-  - salak >= 0.1.10 && < 0.3
-  - menshen
+  - salak >= 0.2 && < 0.3
   - aeson
   - text
   - bytestring
@@ -35,30 +34,25 @@ dependencies:
   - wai
   - warp
   - http-types
-  - servant-client >= 0.15 && < 0.17
-  - servant-server >= 0.15 && < 0.17
+  - servant-server >= 0.16 && < 0.17
   - servant-swagger
   - servant-swagger-ui
   - swagger2
-  - http-client >=0.5.14 && < 0.7
   - vector
+  - menshen
 
 library:
   source-dirs: src
   exposed-modules:
     - Yam
-    - Yam.Internal
-    - Yam.Middleware
-    - Yam.Middleware.Default
-    - Yam.Middleware.Auth
-    - Yam.Middleware.Trace
-    - Yam.Middleware.Client 
     - Yam.Swagger
-    - Yam.Types
     - Yam.Logger
+    - Yam.App
   other-modules:
-    - Yam.Types.Prelude
-    - Yam.Types.Env
+    - Yam.Prelude
+    - Yam.Config
+    - Yam.Middleware.Trace
+    - Yam.Middleware.Error
     
     - Data.Opentracing
     - Data.Opentracing.Types
