--- a/cabal.project
+++ b/cabal.project
@@ -1,3 +1,3 @@
 -- see https://cabal.readthedocs.io/en/latest/nix-local-build-overview.html
 
-packages: yam yam-datasource
+packages: yam yam-redis yam-datasource
