--- a/yam-datasource/package.yaml
+++ b/yam-datasource/package.yaml
@@ -17,7 +17,7 @@ dependencies:
   - unliftio-core
   - resourcet
   - conduit
-  - persistent
+  - persistent >=2.8.0 && <2.11
   - resource-pool
   - monad-logger
   - text
