--- a/yam-datasource/package.yaml
+++ b/yam-datasource/package.yaml
@@ -2,7 +2,7 @@ name:                yam-datasource
 version:             0.6.0
 synopsis:            Yam DataSource Middleware
 #description:
-homepage:            https://github.com/leptonyu/yam/yam-datasource#readme
+homepage:            https://github.com/leptonyu/yam#readme
 license:             BSD3
 author:              Daniel YU
 maintainer:          Daniel YU <leptonyu@gmail.com>
