--- a/yam/yam.cabal
+++ b/yam/yam.cabal
@@ -4,14 +4,14 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a972e1fee960d4f2132a22683280e2ffb89082f41055b0002c22eb569b1c4fc3
+-- hash: c30ca980210136a02b2d75a1ff9cc38435edd53d01ad0458855be44c599dd498
 
 name:           yam
 version:        0.6.0
 synopsis:       A wrapper of servant
 description:    A out-of-the-box wrapper of [servant](https://hackage.haskell.org/package/servant-server).
 category:       Web
-homepage:       https://github.com/leptonyu/yam/yam#readme
+homepage:       https://github.com/leptonyu/yam#readme
 author:         Daniel YU
 maintainer:     Daniel YU <leptonyu@gmail.com>
 copyright:      (c) 2018 Daniel YU
